[package]
name = "rust-kill-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
humantime = "2.1.0"
remove_dir_all = "0.5.3"
